--- a/estilo.css
+++ b/estilo.css
@@ -14,7 +14,7 @@ figure.foto-legenda {
     border: 8px solid red;
 }
 
-figure.foto-legenda {
+figure.foto-legenda jpg {
     width: 100px;
     height: 100px;
 }
