--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,6 @@
-body {
+@charset "UTF-8"
+
+bsody {
     background-color: hsl(51, 65%, 50%);
     color: rgba(0 0 0 1);
 
@@ -11,11 +13,29 @@ p {
 /* Formatação de imagens com legendas*/
 
 figure.foto-legenda {
-    border: 8px solid red;
+    position: relative;
+    border: 8px solid white;
+    box-shadow: 1px 1px 4px black;
 }
 
 figure.foto-legenda jpg {
     width: 100px;
     height: 100px;
+}
+
+figure.foto-legenda figcaption {
+    position: absolute;
+    top: 0px;
+    background-color: rgba(red, green, blue, .4);
+    color: white;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    text-emphasis-style: 1s;
+}
+
+figure.foto-legenda :hover figcaption {
+    opacity: 1  ;
 }
 
